tests/NormalTests/paczka1/small_fuzzy/91407307.err
Error in line 7: nc1vs S600 26,1
Error in line 3: lm5 S328 89,5
Error in line 14: 7HJg0FNjN S328 78,7
